# cnc

./: .gitignore  CMakeLists.txt  client  cnc.code-workspace  go.mod  run_docker.sh
client/: CMakeLists.txt  task.json
client/communication/: CMakeLists.txt
client/communication/include/: client_uart.hpp  task_result_listener.hpp
client/communication/src/: client_uart.cpp  task_result_listener.cpp
client/include/: client_data_receiver.hpp  client_data_sender.hpp  client_movement_task.hpp  client_raw_data_sender.hpp  client_receiver.hpp  client_sender.hpp  client_serial_port_sender.hpp  data_receiver.hpp  data_sender.hpp  idata_sender.hpp  movement_task.hpp  raw_data_communication_manager.hpp
client/src/: client.cpp  client_data_receiver.cpp  client_data_sender.cpp  client_movement_task.cpp  client_raw_data_sender.cpp  client_receiver.cpp  client_sender.cpp  client_serial_port_sender.cpp  data_receiver.cpp  data_sender.cpp  movement_task.cpp  raw_data_communication_manager.cpp
cnc_server/: CMakeLists.txt
cnc_server/include/: mcu_events.hpp
cnc_server/src/: main.cpp  mcu_events.cpp
common/: CMakeLists.txt
common/data/include/: pair.hpp
common/except/: CMakeLists.txt
common/include/: dispatcher.hpp  iparsable.hpp  istring.hpp
common/json/include/: json_object.hpp
common/message_parser/tests/: CMakeLists.txt
communication/: CMakeLists.txt  communication.go  http_connection.go  http_connection_test.go  test_connection.go
communication/hardware/: communication.go
communication/include/: communication_manager.hpp  data_receiver.hpp  data_sender.hpp
communication/src/: communication_manager.cpp  data_receiver.cpp  data_sender.cpp  raw_data_receiver.cpp  raw_data_sender.cpp
data/: CMakeLists.txt
data/include/: istring.hpp  ivector.hpp  list.hpp  list_iter.hpp  list_node.hpp  shared_ptr.hpp  string.hpp
data/src/: ivector_char.cpp  string.cpp
data/tests/: CMakeLists.txt
data/tests/src/: ut_list.cpp  ut_shared_ptr.cpp
framework/: CMakeLists.txt
framework/data/: CMakeLists.txt
framework/data/include/: array.hpp  composite.hpp  idata_parser.hpp  list.hpp  object.hpp  string.hpp  value.hpp
framework/data/src/: array.cpp  composite.cpp  object.cpp  string.cpp
framework/data/tests/: CMakeLists.txt
framework/except/: CMakeLists.txt
framework/except/include/: exception.hpp  exception_handler.hpp
framework/except/src/: exception.cpp  exception_handler.cpp
framework/except/tests/: CMakeLists.txt
framework/include/: dispatcher.hpp  iparsable.hpp  isender.hpp
framework/json/: CMakeLists.txt
framework/json/include/: ijson_value.hpp  json_array.hpp  json_common.hpp  json_object.hpp  json_parser.hpp  json_string.hpp  json_types.hpp  json_utils.hpp
framework/json/src/: json_array.cpp  json_common.cpp  json_object.cpp  json_parser.cpp  json_string.cpp  json_utils.cpp
framework/json/tests/: CMakeLists.txt
framework/memory/: CMakeLists.txt
framework/memory/include/: shared_ptr.hpp
framework/memory/tests/: CMakeLists.txt
framework/message_parser/: CMakeLists.txt
framework/message_parser/src/: message.cpp  message_parser.cpp
framework/message_parser/tests/: CMakeLists.txt
framework/src/: ilistener_const_exception_ref.cpp  ilistener_const_list_char_ref.cpp  iparsable.cpp
framework/system/: CMakeLists.txt
framework/system/include/: imessage_manager.hpp  isender.hpp  message_manager.hpp  message_parser.hpp
framework/system/src/: imessage_manager.cpp  isender.cpp  message_manager.cpp  message_parser.cpp
framework/system/tests/: CMakeLists.txt
json/: CMakeLists.txt
json/include/: ijson_value.hpp  json_array.hpp  json_object.hpp  json_string.hpp  json_types.hpp  json_utils.hpp
json/src/: ijson_value.cpp  json_array.cpp  json_object.cpp  json_string.cpp  json_utils.cpp
json/tests/: CMakeLists.txt  ut_json_object.cpp  ut_json_string.cpp
json/tests/include/: test_utils.hpp
json/tests/src/: test_utils.cpp  ut_json_object.cpp  ut_json_string.cpp
message_parser/: CMakeLists.txt
message_parser/include/: imessage_parser.hpp  message.hpp  message_parser.hpp
message_parser/src/: imessage.cpp  imessage_parser.cpp  message_parser.cpp
message_parser/tests/include/: test_message_listener.hpp
message_parser/tests/src/: test_message_listener.cpp
serial_port/: CMakeLists.txt
serial_port/include/: serial_port_sender.hpp
serial_port/src/: serial_port_sender.cpp
server/: CMakeLists.txt  pico_sdk_import.cmake  sizes
server/automation/: run_tests.py
server/basics/: CMakeLists.txt
server/basics/include/: builder.hpp  copyable.hpp  creator.hpp  factory.hpp  sender.hpp  task.hpp
server/cnc_engine/: CMakeLists.txt
server/communication/: CMakeLists.txt
server/config/: launch.json  settings.json
server/data/: CMakeLists.txt
server/doc/: server.c4  server_engine.c4  server_engine.dsl  specification.c4
server/engine/: CMakeLists.txt
server/hardware/: CMakeLists.txt
server/include/: features.hpp  mcu_resource_manager.hpp  server_data_receiver.hpp  server_data_sender.hpp  server_message_listener.hpp  server_movement_task.hpp  server_movement_task_creator.hpp  server_task_manager.hpp  string.hpp  task_factory.hpp  uart_message_manager.hpp
server/inventory/: CMakeLists.txt
server/src/: cnc_firmware copy.cpp  cnc_firmware.cpp  features.cpp  list_char.cpp  report_status_task.cpp  server.cpp  server_.cpp  server_data_sender.cpp  server_message_listener.cpp  server_movement_task.cpp  server_movement_task_creator.cpp  server_task_manager.cpp  string.cpp  task_factory.cpp  uart_message_manager.cpp
server/task_factory/: CMakeLists.txt
server/tasks/: CMakeLists.txt
task/: CMakeLists.txt
task/include/: icnc_task.hpp  movement_task.hpp
tests/: CMakeLists.txt
tests/include/: cnc_fixture.hpp
tests/src/: ut_gpo_allocator.cpp  ut_persistent_task.cpp  ut_remote_stepper_motor.cpp  ut_state_allocator.cpp  ut_stepper_motor.cpp  ut_stepper_motor_local_server.cpp  ut_task_data_generator.cpp
util/: CMakeLists.txt
util/include/: custom_task_executor.hpp  task_object_generator.hpp
util/tests/: CMakeLists.txt
(+170 files in other folders)
