add_library(raw_data_receiver INTERFACE)
target_sources(raw_data_receiver INTERFACE ${CMAKE_CURRENT_LIST_DIR}/src/raw_data_receiver.cpp)
target_link_libraries(raw_data_receiver INTERFACE ireceiver)
target_include_directories(raw_data_receiver INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)

add_library(raw_data_receiver_test STATIC)
target_link_libraries(raw_data_receiver_test PRIVATE raw_data_receiver)

add_library(raw_data_sender INTERFACE)
target_sources(raw_data_sender INTERFACE ${CMAKE_CURRENT_LIST_DIR}/src/raw_data_sender.cpp)
target_link_libraries(raw_data_sender INTERFACE isender)
target_include_directories(raw_data_sender INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)

add_library(raw_data_sender_test STATIC)
target_link_libraries(raw_data_sender_test PRIVATE raw_data_sender)