add_library(server_data_sender INTERFACE)
target_sources(server_data_sender INTERFACE ${CMAKE_CURRENT_LIST_DIR}/src/server_data_sender.cpp)
target_link_libraries(server_data_sender INTERFACE data_sender)
target_include_directories(server_data_sender INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)

add_library(server_data_receiver INTERFACE)
target_sources(server_data_receiver INTERFACE ${CMAKE_CURRENT_LIST_DIR}/src/server_data_receiver.cpp)
target_link_libraries(server_data_receiver INTERFACE data_receiver)
target_include_directories(server_data_receiver INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)